finished making my frog moveable, and added logs

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
       <div></div>
       <div></div>
       <div></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-left"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
-      <div class="log-right"></div>
+      <div class="log-left l1"></div>
+      <div class="log-left l2"></div>
+      <div class="log-left l3"></div>
+      <div class="log-left l4"></div>
+      <div class="log-left l5"></div>
+      <div class="log-left l1"></div>
+      <div class="log-left l2"></div>
+      <div class="log-left l3"></div>
+      <div class="log-left l4"></div>
+      <div class="log-right l5"></div>
+      <div class="log-right l1"></div>
+      <div class="log-right l2"></div>
+      <div class="log-right l3"></div>
+      <div class="log-right l4"></div>
+      <div class="log-right l5"></div>
+      <div class="log-right l1"></div>
+      <div class="log-right l2"></div>
+      <div class="log-right l3"></div>
       <div></div>
       <div></div>
       <div></div>
@@ -61,24 +61,24 @@
       <div></div>
       <div></div>
       <div></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-left"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
-      <div class="car-right"></div>
+      <div class="car-left c1"></div>
+      <div class="car-left c2"></div>
+      <div class="car-left c3"></div>
+      <div class="car-left c4"></div>
+      <div class="car-left c5"></div>
+      <div class="car-left c1"></div>
+      <div class="car-left c2"></div>
+      <div class="car-left c3"></div>
+      <div class="car-left c4"></div>
+      <div class="car-right c5"></div>
+      <div class="car-right c1"></div>
+      <div class="car-right c2"></div>
+      <div class="car-right c3"></div>
+      <div class="car-right c4"></div>
+      <div class="car-right c5"></div>
+      <div class="car-right c1"></div>
+      <div class="car-right c2"></div>
+      <div class="car-right c3"></div>
       <div></div>
       <div></div>
       <div></div>
@@ -92,7 +92,7 @@
       <div></div>
       <div></div>
       <div></div>
-      <div class="starting-block"></div>
+      <div class="starting-block frog"></div>
       <div></div>
       <div></div>
       <div></div>
