--- a/index.html
+++ b/index.html
@@ -1,102 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frogger</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js" defer></script>
-  </head>
-  <body>
+</head>
 
-<h3>Seconds left: <span id="timer">20</span>
-    <h3>Result: <span id="result">0</span></h3>
+<body>
+    <h1>Frogger</h1>
+    <h3>Seconds left: <span id="timer">20</span>
+        <h3>Result: <span id="result">0</span></h3>
 
-    <button id="start-pause-button">Start/Pause</button>
+        <div class="grid">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="ending-block"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="log-left l1"></div>
+            <div class="log-left l2"></div>
+            <div class="log-left l3"></div>
+            <div class="log-left l4"></div>
+            <div class="log-left l5"></div>
+            <div class="log-left l1"></div>
+            <div class="log-left l2"></div>
+            <div class="log-left l3"></div>
+            <div class="log-left l4"></div>
+            <div class="log-right l5"></div>
+            <div class="log-right l1"></div>
+            <div class="log-right l2"></div>
+            <div class="log-right l3"></div>
+            <div class="log-right l4"></div>
+            <div class="log-right l5"></div>
+            <div class="log-right l1"></div>
+            <div class="log-right l2"></div>
+            <div class="log-right l3"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="car-left c1"></div>
+            <div class="car-left c2"></div>
+            <div class="car-left c3"></div>
+            <div class="car-left c1"></div>
+            <div class="car-left c2"></div>
+            <div class="car-left c3"></div>
+            <div class="car-left c1"></div>
+            <div class="car-left c2"></div>
+            <div class="car-left c3"></div>
+            <div class="car-right c1"></div>
+            <div class="car-right c2"></div>
+            <div class="car-right c3"></div>
+            <div class="car-right c1"></div>
+            <div class="car-right c2"></div>
+            <div class="car-right c3"></div>
+            <div class="car-right c1"></div>
+            <div class="car-right c2"></div>
+            <div class="car-right c3"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div class="starting-block frog"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
 
-    <div class="grid">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="ending-block"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
-      <div class="log-left l4"></div>
-      <div class="log-left l5"></div>
-      <div class="log-left l1"></div>
-      <div class="log-left l2"></div>
-      <div class="log-left l3"></div>
-      <div class="log-left l4"></div>
-      <div class="log-right l5"></div>
-      <div class="log-right l1"></div>
-      <div class="log-right l2"></div>
-      <div class="log-right l3"></div>
-      <div class="log-right l4"></div>
-      <div class="log-right l5"></div>
-      <div class="log-right l1"></div>
-      <div class="log-right l2"></div>
-      <div class="log-right l3"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
-      <div class="car-left c1"></div>
-      <div class="car-left c2"></div>
-      <div class="car-left c3"></div>
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
-      <div class="car-right c1"></div>
-      <div class="car-right c2"></div>
-      <div class="car-right c3"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div class="starting-block frog"></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-  </body>
+            <button id="start-pause-button">Start/Pause</button>
+
+        </div>
+</body>
+
 </html>
